--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -876,6 +876,7 @@ resources:
             - '"%{::osfamily}"'
             - common
             - cinder_netapp_data # Optionally provided by ControllerExtraConfigPre
+            - neutron_cisco_data # Optionally provided by ControllerExtraConfigPre
           datafiles:
             controller_extraconfig:
               mapped_data: {get_param: ControllerExtraConfig}
