--- a/network/ports/storage.yaml
+++ b/network/ports/storage.yaml
@@ -14,6 +14,7 @@ parameters:
     type: string
   ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
+    default: ''
     type: string
 
 resources:
@@ -39,4 +40,3 @@ outputs:
               - '/'
               - {get_attr: [StoragePort, subnets, 0, cidr, -2]}
               - {get_attr: [StoragePort, subnets, 0, cidr, -1]}
-
