--- a/environments/neutron-ml2-cisco-nexus-ucsm.yaml
+++ b/environments/neutron-ml2-cisco-nexus-ucsm.yaml
@@ -1,13 +1,13 @@
 # A Heat environment file which can be used to enable a
 # a Cisco Neutron plugin.
 resource_registry:
-  OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/network-cisco.yaml
+  OS::TripleO::AllNodesExtraConfig: ../puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
 
 parameter_defaults:
   NetworkUCSMIp: '127.0.0.1'
   NetworkUCSMUsername: 'admin'
   NetworkUCSMPassword: 'password'
-  NetworkUCSMHostList: 'host1:profile1, host2:profile2'
+  NetworkUCSMHostList: '12:34:56:78:9a:bc:profile1, 12:34:56:78:9a:de:profile2'
   NetworkUCSMSupportedPciDevs: ''
   NetworkNexusConfig: {}
   NetworkNexusManagedPhysicalNetwork: ''
@@ -23,4 +23,3 @@ parameter_defaults:
   NetworkNexusHostKeyChecks: 'false'
   NetworkNexusVxlanVniRanges: '0:0'
   NetworkNexusVxlanMcastRanges: '0.0.0.0:0.0.0.0'
-
