--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -98,7 +98,7 @@ parameters:
 
 resources:
   BlockStorage:
-    type: OS::Nova::Server
+    type: OS::TripleO::Server
     metadata:
       os-collect-config:
         command: {get_param: ConfigCommand}
