--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -324,7 +324,7 @@ parameters:
 resources:
 
   NovaCompute:
-    type: OS::Nova::Server
+    type: OS::TripleO::Server
     metadata:
       os-collect-config:
         command: {get_param: ConfigCommand}
