--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -404,7 +404,7 @@ parameter_groups:
 resources:
 
   Controller:
-    type: OS::Nova::Server
+    type: OS::TripleO::Server
     metadata:
       os-collect-config:
         command: {get_param: ConfigCommand}
