Support new form of servers config for ML2 cisco nexus allnodes config.
The puppet-neutron changes to remove the usage of ERB templates require
changing the format of the 'servers' hash/dictionary to include a key
for use with puppet's create_resources directly from hiera data.

Depends-On: I401371c9e5176de7ce19d4d4e878e9f2e69aab80

Change-Id: I950b7fb019dd8dd072592618b968a19df5c9c884

--- a/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
+++ b/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
@@ -257,8 +257,7 @@ resources:
             lmac=mac.lower()
             if lmac in mac2host:
               if mac2host[lmac] in nexus_cp[nexus_switch]['servers']:
-                cur_swports = nexus_cp[nexus_switch]['servers'][mac2host[lmac]]
-                nexus_cp[nexus_switch]['servers'][mac2host[lmac]] = cur_swports + ',' + swport
+                nexus_cp[nexus_switch]['servers'][mac2host[lmac]]['ports'] += ',' + swport['ports']
               else:
                 nexus_cp[nexus_switch]['servers'][mac2host[lmac]] = swport
             del nexus_cp[nexus_switch]['servers'][mac]
