Add YAML sanity check
Adds a "validate" tox env for basic sanity checking of templates.
Currently it just validates that all of the .yaml files are in fact
valid YAML.  In the future we might want to add more, but this
seemed like a reasonable start.

Change-Id: I8091bbad0003b150e23dae5de4f465053c982229

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,6 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:venv]
 commands = {posargs}
+
+[testenv:validate]
+commands = python ./tools/yaml-validate.py .
