Enable glance-api show_image_direct_url for COW
Setting `show_image_direct_url` to true allows to enable Copy-On-Write
features when using some storage backends across Nova, Cinder & Glance.
It allows for example nearly instantaneous creation of instances root
disk and volumes when using RBD as a storage backend for all projects by
using Ceph features instead of downloading from Ceph via Glance, then
convert the image, then upload to Ceph via Nova or Cinder.

Change-Id: I1f56273c6b7c8d3922799cae07a66eebc0884205

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -61,6 +61,7 @@ swift::proxy::account_autocreate: true
 
 # glance
 glance::api::pipeline: 'keystone'
+glance::api::show_image_direct_url: true
 glance::registry::pipeline: 'keystone'
 glance::backend::swift::swift_store_create_container_on_put: true
 glance::backend::rbd::rbd_store_user: 'openstack'
