neutron: enable nova-event-callback by default
* Add NovaApiVirtualIP string parameter.
* Compute nova_url and nova_admin_auth_url parameters.
* Configure in Hiera neutron::server::notifications::* parameters.
* non-ha: include ::neutron::server::notifications
* ha: include ::neutron::server::notifications and create orchestration
* Set vif_plugging_is_fatal to True so we actually fail if Neutron is not
  able to create the VIF during Nova server creation workflow.

Depends-On: I21dc10396e92906eab4651c318aa2ee62a8e03c7
Change-Id: I02e41f87404e0030d488476680af2f6d45af94ff
(cherry picked from commit 28d5d566f95dfade66d7c48c4b9565842c4571ad)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -876,6 +876,7 @@ resources:
         neutron_public_url: { get_param: [ EndpointMap, NeutronPublic, uri ] }
         neutron_admin_url: { get_param: [ EndpointMap, NeutronAdmin, uri ] }
         neutron_admin_auth_url: { get_param: [ EndpointMap, KeystoneAdmin, uri ] }
+        nova_internal_url: { get_param: [ EndpointMap, NovaInternal, uri ] }
         ceilometer_backend: {get_param: CeilometerBackend}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
@@ -1177,6 +1178,15 @@ resources:
                 neutron_dsn: {get_input: neutron_dsn}
                 neutron::agents::metadata::auth_url: {get_input: keystone_identity_uri}
                 neutron::db::mysql::password: {get_input: neutron_password}
+                neutron::keystone::auth::public_url: {get_input: neutron_public_url }
+                neutron::keystone::auth::internal_url: {get_input: neutron_internal_url }
+                neutron::keystone::auth::admin_url: {get_input: neutron_admin_url }
+                neutron::keystone::auth::password: {get_input: neutron_password }
+                neutron::keystone::auth::region: {get_input: keystone_region}
+                neutron::server::notifications::nova_url: {get_input: nova_internal_url}
+                neutron::server::notifications::auth_url: {get_input: neutron_admin_auth_url}
+                neutron::server::notifications::tenant_name: 'service'
+                neutron::server::notifications::password: {get_input: nova_password}
 
                 # Ceilometer
                 ceilometer_backend: {get_input: ceilometer_backend}
