nova: set catalog_info to InternalURL
In nova.conf, set cinder/catalog_info to 'volumev2:cinderv2:internalURL'
instead of 'volumev2:cinderv2:publicURL'.
So Nova will use internal Cinder endpoint to reach volume API by
using internal network.

Change-Id: Ia34f0fe59f662c3ad29ca0178c01ef1570759d57
(cherry picked from commit c66c5c6ff8346963940b3f5623c7cf5d5fb9df61)

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -29,3 +29,5 @@ cinder::rabbit_heartbeat_timeout_threshold: 60
 ceilometer::rabbit_heartbeat_timeout_threshold: 60
 heat::rabbit_heartbeat_timeout_threshold: 60
 keystone::rabbit_heartbeat_timeout_threshold: 60
+
+nova::cinder_catalog_info: 'volumev2:cinderv2:internalURL'
