controller/ceilometer: use internalURL for os endpoint type
To let ceilometer access to keystone endpoints, use internalURL instead
of publicURL for security & performances reasons.

Ceilometer services (API, agents) will use internalURL endpoint to talk
to other services (keystone, neutron, etc).

Change-Id: I4cb843400f244cd34bbae4bc76371977780c7943
(cherry picked from commit 823c7e100ce59d59e907f62caeb917f75670224e)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -86,6 +86,9 @@ nova::cron::archive_deleted_rows::hour: '*/12'
 nova::cron::archive_deleted_rows::destination: '/dev/null'
 nova::notification_driver: messaging
 
+# ceilometer
+ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
+
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 cinder::cron::db_purge::destination: '/dev/null'
