controller/ceilometer: use internalURL for os endpoint type
To let ceilometer access to keystone endpoints, use internalURL instead
of publicURL for security & performances reasons.

Ceilometer services (API, agents) will use internalURL endpoint to talk
to other services (keystone, neutron, etc).

Change-Id: I4cb843400f244cd34bbae4bc76371977780c7943

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -75,6 +75,9 @@ nova::api::default_floating_pool: 'public'
 nova::api::osapi_v3: true
 nova::scheduler::filter::ram_allocation_ratio: '1.0'
 
+# ceilometer
+ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
+
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 
