--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -15,11 +15,10 @@ nova::compute::rbd::rbd_keyring: 'client.openstack'
 nova::compute::rbd::libvirt_images_rbd_pool: 'vms'
 nova::compute::rbd::libvirt_rbd_secret_uuid: "%{hiera('ceph::profile::params::fsid')}"
 
+nova::api::default_floating_pool: 'public'
 nova::config::nova_config:
   cinder/catalog_info:
     value: 'volumev2:cinderv2:internalURL'
-  DEFAULT/default_floating_pool:
-    value: 'public'
 
 ceilometer::agent::auth::auth_tenant_name: 'service'
 
