swift::storage::all deprecation cleanup
This patch adds settings for swift::storage::all so
that we set the recommended the incoming and outgoing
chmod permissions.

Depends-On: I627ab2255087b0ebc2d3ddc9cd4a7a7d254abb65

Change-Id: I2f14c9afe7b7135ad1bfecb9db0a39bfc3b4d03a

--- a/puppet/hieradata/object.yaml
+++ b/puppet/hieradata/object.yaml
@@ -1,4 +1,7 @@
 # Hiera data for swift storage nodes
+swift::storage::all::incoming_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
+swift::storage::all::outgoing_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
+
 swift::storage::all::object_pipeline:
   - healthcheck
   - recon
